--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>HLSP</title>
+<title>Blogpage</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -107,6 +107,7 @@ and is wrapped around the whole page content, except for the footer in this exam
         <span>Elf-ball Commander</span>
       </a>
     </li>
+
     <a href="https://archidekt.com/decks/5470898/kellan_the_faeblooded">
       <li class="w3-padding-16">
         <img src="Images/Kellan.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
@@ -114,6 +115,7 @@ and is wrapped around the whole page content, except for the footer in this exam
         <span>Equipment-based Voltron Commander</span>
       </a>
       </li>
+
       <a href="https://archidekt.com/decks/4388007/blink">
       <li class="w3-padding-16">
         <img src="Images/brago.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
@@ -121,6 +123,7 @@ and is wrapped around the whole page content, except for the footer in this exam
         <span>Artifact Combo Commander</span>
       </a>
       </li>
+
       <a href="https://archidekt.com/decks/4335841/strefan_reanimator">
       <li class="w3-padding-16 w3-hide-medium w3-hide-small">
         <img src="Images/brago.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
@@ -128,7 +131,7 @@ and is wrapped around the whole page content, except for the footer in this exam
         <span>Reanimator Commander</span>
       </a>
       </li>
-    </li>
+
     <a href="https://archidekt.com/decks/3065098/rafiq">
     <li class="w3-padding-16 w3-hide-medium w3-hide-small">
       <img src="Images/Rafiq.webp" alt="Image" class="w3-left w3-margin-right" style="width:50px">
@@ -136,6 +139,7 @@ and is wrapped around the whole page content, except for the footer in this exam
       <span>Voltron-Style Casual Commander</span>
     </a>
     </li>
+
     <a href="https://archidekt.com/decks/4094522/grand_arbiter_augustin_iv">
       <li class="w3-padding-16 w3-hide-medium w3-hide-small">
         <img src="Images/AugustinIV.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
@@ -143,13 +147,14 @@ and is wrapped around the whole page content, except for the footer in this exam
         <span>Stax Commander</span>
       </a>
       </li>
+
       <a href="https://archidekt.com/decks/3670208/feather_edh">
         <li class="w3-padding-16 w3-hide-medium w3-hide-small">
           <img src="Images/feather.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
           <span class="w3-large">Feather, the Redeemed</span><br>
           <span>Spellslinger Commander</span>
         </a>
-        </li>    
+        </li>
     </ul>
   </div>
   <hr> 
