--- a/profile.html
+++ b/profile.html
@@ -23,8 +23,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
   <!-- Avatar image in top left corner -->
-  <a href="index.html"><img src="jin kazama.png" style="width:75%"></a>
-  <a href="#" class="w3-bar-item w3-button w3-padding-large w3-black">
+  <img src="Images/jin kazama.png" style="width:75%">
+  <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-black">
     <i class="fa fa-home w3-xxlarge"></i>
     <p>HOME</p>
   </a>
@@ -58,7 +58,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small">I am</span> James Peter Pulmano</h1>
     <p>Collector and Web Designer.</p>
-    <img src="MLB13.webp" alt="boy" class="w3-image" width="50%" height="70%">
+    <img src="Images/MLB13.webp" alt="boy" class="w3-image" width="50%" height="70%">
   </header>
 
   <!-- About Section -->
